--- a/Neff/Other/68830_EU_08_02b.html
+++ b/Neff/Other/68830_EU_08_02b.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b46d6d3bc3a9f492db86fcf3af161fa67"></div>
+    <div id="bee6a05af481c4308a6a022945db2034e"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,14 +28,14 @@
 
     a.config =
         {
-			"description": "Technology and choices that may DECREASE future impacts of electricity use",
+			"description": "Technology and choices that may DECREASE future impacts of transportation",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "b46d6d3bc3a9f492db86fcf3af161fa67",
+                        "containerId": "bee6a05af481c4308a6a022945db2034e",
                         "brixConfig":
                             [
                                 {
@@ -69,13 +69,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S1.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_02b_S1.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Increased use of energy efficient technologies<br><br>" }
+                                                                                "value": { "type": "constant", "value": "Vehicles with high fuel efficiency<br><br>" }
                                                                             }
                                                                         ]
                                                                 },
@@ -91,13 +91,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S2.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_02b_S2.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Energy conservation" }
+                                                                                "value": { "type": "constant", "value": "Electric cars paired with renewable sources of electricity" }
                                                                             }
                                                                         ]
                                                                 },
@@ -113,13 +113,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S3.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_02b_S3.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Generation of electricity from renewable sources" }
+                                                                                "value": { "type": "constant", "value": "Discovery and use of sustainable alternatives to fossil fuels" }
                                                                             }
                                                                         ]
                                                                 },
@@ -135,13 +135,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S4.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_02b_S4.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "More efficient electricity distribution" }
+                                                                                "value": { "type": "constant", "value": "Strict policies regarding emissions and fuel efficiency" }
                                                                             }
                                                                         ]
                                                                 }
@@ -155,7 +155,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 450, "width": 335},
+                                            "maxSize": { "height": 450, "width": 335 }
                                         },
                                     "configFixup":
                                         [
@@ -165,7 +165,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#b46d6d3bc3a9f492db86fcf3af161fa67"
+                                                        "selector": "#bee6a05af481c4308a6a022945db2034e"
                                                     }
                                             }
                                         ]
