--- a/Neff/Other/68830_EU_08_03b.html
+++ b/Neff/Other/68830_EU_08_03b.html
@@ -9,7 +9,7 @@
     <link href="css/widgets.css" rel="stylesheet">
 </head>
 <body>
-    <div id="b46d6d3bc3a9f492db86fcf3af161fa67"></div>
+    <div id="bfad77c77be1a4c95bf63f5110d48553c"></div>
     <script src="js/d3.v3.min.js"></script>
     
     <script src="js/brixlib-compiled.js"></script>
@@ -28,14 +28,14 @@
 
     a.config =
         {
-			"description": "Technology and choices that may DECREASE future impacts of electricity use",
+			"description": "Technology and choices that may DECREASE future impacts of heating, cooling, and cooking",
             //"imgBaseUrl": "http://localhost:8088/images/",
             "imgBaseUrl": "",
             "containerConfig":
                 [
                     {
                         "description": "Container for the LabelCarousel",
-                        "containerId": "b46d6d3bc3a9f492db86fcf3af161fa67",
+                        "containerId": "bfad77c77be1a4c95bf63f5110d48553c",
                         "brixConfig":
                             [
                                 {
@@ -69,13 +69,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S1.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_03b_S1.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Increased use of energy efficient technologies<br><br>" }
+                                                                                "value": { "type": "constant", "value": "Improved use of insulation in conventional homes<br><br>" }
                                                                             }
                                                                         ]
                                                                 },
@@ -91,7 +91,29 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S2.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_03b_S2.jpg" }
+                                                                                        ]
+                                                                                    }
+                                                                            },
+                                                                            {
+                                                                                "name": "caption",
+                                                                                "value": { "type": "constant", "value": "Alternative energy-efficient home designs" }
+                                                                            }
+                                                                        ]
+                                                                },
+                                                                {
+                                                                    "type": "object",
+                                                                    "properties":
+                                                                        [
+                                                                            {
+                                                                                "name": "URI",
+                                                                                "value":
+                                                                                    {
+                                                                                        "type": "join",
+                                                                                        "parts":
+                                                                                        [
+                                                                                            { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_03b_S3.jpg" }
                                                                                         ]
                                                                                     }
                                                                             },
@@ -113,35 +135,13 @@
                                                                                         "parts":
                                                                                         [
                                                                                             { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S3.jpg" }
+                                                                                            { "type": "constant", "value": "img/68830_EU_08_03b_S4.png" }
                                                                                         ]
                                                                                     }
                                                                             },
                                                                             {
                                                                                 "name": "caption",
-                                                                                "value": { "type": "constant", "value": "Generation of electricity from renewable sources" }
-                                                                            }
-                                                                        ]
-                                                                },
-                                                                {
-                                                                    "type": "object",
-                                                                    "properties":
-                                                                        [
-                                                                            {
-                                                                                "name": "URI",
-                                                                                "value":
-                                                                                    {
-                                                                                        "type": "join",
-                                                                                        "parts":
-                                                                                        [
-                                                                                            { "type": "ref", "domain": "info", "refId": "imgBaseUrl" },
-                                                                                            { "type": "constant", "value": "img/68830_EU_08_04b_S4.jpg" }
-                                                                                        ]
-                                                                                    }
-                                                                            },
-                                                                            {
-                                                                                "name": "caption",
-                                                                                "value": { "type": "constant", "value": "More efficient electricity distribution" }
+                                                                                "value": { "type": "constant", "value": "Policies that require or encourage energy efficiency" }
                                                                             }
                                                                         ]
                                                                 }
@@ -155,7 +155,7 @@
                                     "bricType": "SvgContainer",
                                     "config":
                                         {
-                                            "maxSize": { "height": 450, "width": 335},
+                                            "maxSize": { "height": 450, "width": 335 }
                                         },
                                     "configFixup":
                                         [
@@ -165,7 +165,7 @@
                                                 "value":
                                                     {
                                                         "type": "d3select",
-                                                        "selector": "#b46d6d3bc3a9f492db86fcf3af161fa67"
+                                                        "selector": "#bfad77c77be1a4c95bf63f5110d48553c"
                                                     }
                                             }
                                         ]
