--- a/Neff/Other/68830_EU_08_04a.html
+++ b/Neff/Other/68830_EU_08_04a.html
@@ -44,7 +44,8 @@
                                     "config":
                                         {
                                             "id": "lblCrsl1",
-                                            "imagesActualSize": { "height": 335, "width": 335 }
+                                            "imagesActualSize": { "height": 335, "width": 335 },
+                                            "displayWidth": 335
                                         },
                                     "configFixup":
                                         [
