fix json formatting errors (tabs in strings are not allowed), embedded double quotes need escaping

--- a/Neff/MC/68830_RE_M07_02.html
+++ b/Neff/MC/68830_RE_M07_02.html
@@ -45,7 +45,7 @@
 											"choices":
 												[
 													{
-														"content": "Renewable energy requires technology that is not always domestic, and this conflicts with the general goal to reduce reliance on "foreign" forms of energy.",
+														"content": "Renewable energy requires technology that is not always domestic, and this conflicts with the general goal to reduce reliance on \"foreign\" forms of energy.",
 														"answerKey": "answer1"
 													},
 													{
